# reasoning-kernel

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: DEVELOPMENT.md  index.html
src/reasoning_kernel/: __init__.py  config.py
src/reasoning_kernel/context/: assembler.py
src/reasoning_kernel/demo/: _report.py  email_exfil.py  live_run.py  merge.py  reasoner_error.py  run_limits.py  subkernel.py
src/reasoning_kernel/kernel/: effects.py  gate.py  interpreter.py  taint.py
src/reasoning_kernel/memory/: store.py  trace.py
src/reasoning_kernel/reasoner/: anthropic.py  base.py  deepseek.py  factory.py  fake.py  openai.py  parse.py  roles.py
src/reasoning_kernel/schemas/: capability.py  ids.py  limits.py  plan.py  policy.py  provenance.py  registry.py  trace.py  values.py
src/reasoning_kernel/tools/: demo_mail.py  registry.py
tests/: conftest.py  test_capability.py  test_composition.py  test_declass_policy.py  test_demo_email_exfil.py  test_demo_mail_tools.py  test_gate_capability.py  test_gate_provenance_declassify.py  test_interpreter_loop.py  test_invariant_a.py  test_merge.py  test_no_bypass_conformance.py  test_parse_with_schema.py  test_plan_schema.py  test_provenance_propagation.py  test_providers_live.py  test_public_api.py  test_reasoner_factory.py  test_reasoner_robustness.py  test_registry.py  test_run_limits.py  test_store.py  test_subject_provenance.py  test_subkernel.py  test_trace_append_only.py
